# exodossier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  conftest.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-ingest.txt
api/: __init__.py  deps.py  main.py  queries.py
api/routers/: __init__.py  attribution.py  conflicts.py  search.py  stats.py  target.py  twoskies.py
common/: db.py
db/migrations/: 0001_ingest_ledger.sql  0002_raw.sql  0003_identity.sql  0004_disposition_seed.sql  0005_disposition_ctoi.sql  0006_lightcurve.sql
docs/: SPEC.md  STUDY_GUIDE.md  STUDY_GUIDE_PLAIN.md
docs/reports/: conflict_report.md  recovery_report.md
docs/research/: demand-validation.md
identity/: assertions.py  build.py  merge.py  normalize.py  precedence.yml  resolve.py
ingest/: loaders.py  runlog.py
mcp/: README.md  server.py
pipeline/: __init__.py  detect.py  fetch_lightcurves.py  process.py  select_targets.py  tls_worker.py
quality/: fp_scenarios.py  recovery_report.py  report.py
scripts/: build_graph.py  ingest_all.py  migrate.py
tests/: test_api_conflicts.py  test_api_endpoints.py  test_api_twoskies.py  test_cluster.py  test_detect.py  test_loaders.py  test_mcp_server.py  test_normalize.py  test_pipeline.py  test_report.py  test_resolve.py  test_runlog.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx  theme.css
web/src/api/: client.ts  twoskies.ts  types.ts
web/src/components/: CongestionHeatmap.tsx  DataTable.tsx  Panel.tsx  (+5 more)
(+18 files in other folders)
